# DeFuzz

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/kotlin/al/aoli/defuzz/app/: App.kt  MessageUtils.kt
app/src/test/kotlin/al/aoli/defuzz/app/: MessageUtilsTest.kt
buildSrc/src/main/groovy/: al.aoli.defuzz.kotlin-application-conventions.gradle  al.aoli.defuzz.kotlin-common-conventions.gradle  al.aoli.defuzz.kotlin-library-conventions.gradle
examples/: build.gradle
fuzzer/: build.gradle
fuzzer/src/main/kotlin/al/aoli/defuzz/fuzzer/cli/: Main.kt
fuzzer/src/main/kotlin/al/aoli/defuzz/fuzzer/runners/jqf/: DeFuzzCounter.kt  DeFuzzCoverage.kt  DeFuzzGuidance.kt  JQFRunner.kt
fuzzer/src/main/kotlin/al/aoli/defuzz/fuzzer/runtime/: DeFuzzRuntime.kt
list/: build.gradle
list/src/main/kotlin/al/aoli/defuzz/list/: LinkedList.kt
list/src/test/kotlin/al/aoli/defuzz/list/: LinkedListTest.kt
native/: build.gradle
native/src/: CMakeLists.txt
native/src/cpp/: CMakeLists.txt  agent.cc  breakpoint_client.cc  breakpoint_method_visitor.cc  defuzz_counter.cc  defuzz_main.cc
native/src/headers/: agent.hpp  breakpoint_client.hpp  runtime.hpp
native/src/main/cpp/: agent.cc
runtime/: build.gradle
runtime/src/main/kotlin/al/aoli/defuzz/runtime/: BreakPointAnalyzer.kt  BreakPointClassReader.kt  BreakPointClassVisitor.kt  BreakPointMethodVisitor.kt  DeFuzzRuntime.kt  Service.kt
runtime/src/main/proto/: service.proto
utilities/: build.gradle
utilities/src/main/kotlin/al/aoli/defuzz/utilities/: JoinUtils.kt  SplitUtils.kt  StringUtils.kt
